--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2c768395",
+   "id": "fa7b4512",
    "metadata": {},
    "source": [
     "1.\tHarvard Law School courses often have assigned seating to facilitate the “Socratic method.” Suppose that there are 100 first year Harvard Law students, and each takes two courses: Torts and Contracts. Both are held in the same lecture hall (which has 100 seats), and the seating is uniformly random and independent for the two courses. \n",
@@ -19,7 +19,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "02e4d176",
+   "id": "6bed7e6b",
    "metadata": {},
    "source": [
     "![1.PNG](attachment:1.PNG)"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "3acfa357",
+   "id": "a130d025",
    "metadata": {},
    "source": [
     "(b) Find a simple but accurate approximation to the probability that no one has the same seat for both courses. \n",
@@ -42,7 +42,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "97b2ffaf",
+   "id": "64ad1e46",
    "metadata": {},
    "source": [
     "![2.PNG](attachment:2.PNG)"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07bc5c6e",
+   "id": "35c5a07f",
    "metadata": {},
    "source": [
     "2.\tThere are 100 passengers lined up to board an airplane with 100 seats (with each seat assigned to one of the passengers). The first passenger in line crazily decides to sit in a randomly chosen seat (with all seats equally likely). Each subsequent passenger takes his or her assigned seat if available, and otherwise sits in a random available seat. What is the probability that the last passenger in line gets to sit in his or her assigned seat?"
@@ -58,9 +58,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d92ff49",
+   "id": "68866dc9",
    "metadata": {},
    "source": [
+    "Ans:-\n",
+    "\n",
     "Let’s first consider a special case where there are only 2 people (Alice and Bob) and 2 seats on the airplane. Alice picks a seat at random. The only way Bob gets to pick his designated seat is if Alice correctly picks hers. Since there are only 2 choices for Alice she picks her own seat correctly with probability 1/21/2\n",
     "\n",
     "Therefore P(P( Bob gets his seat)=P()=P(Alice chooses her own seat)=1/2)=1/2\n",
@@ -83,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad5f90ce",
+   "id": "1242d8f6",
    "metadata": {},
    "outputs": [],
    "source": []
